// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Platform/Webex Member External Organization 1`] = `
Array [
  <div
    style={
      Object {
        "width": "20rem",
      }
    }
  >
    <div
      className="wxc-member"
    >
      <div
        className="wxc-avatar"
      >
        <img
          alt="avatar"
          src="./images/brandon.png"
        />
      </div>
      <div
        className="md-avatar md-avatar--medium wxc-old-avatar"
        title="Brandon Seeger"
      >
        <span
          className="md-avatar__letter"
          style={
            Object {
              "backgroundColor": "",
              "color": "",
            }
          }
        >
          BS
        </span>
        <img
          alt="Brandon Seeger"
          className="md-avatar__img md-avatar__img--hidden"
          draggable={false}
          onError={[Function]}
          onLoad={[Function]}
          src="./images/brandon.png"
        />
      </div>
      <div
        className="details"
      >
        <div
          className="name"
        >
          Brandon Seeger
        </div>
        <div
          className="organization"
        >
          Gmail.com
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Member Guest 1`] = `
Array [
  <div
    style={
      Object {
        "width": "20rem",
      }
    }
  >
    <div
      className="wxc-member"
    >
      <div
        className="wxc-avatar"
      >
        <img
          alt="avatar"
          src="./images/maria.png"
        />
      </div>
      <div
        className="md-avatar md-avatar--medium wxc-old-avatar"
        title="Maria Rossi"
      >
        <span
          className="md-avatar__letter"
          style={
            Object {
              "backgroundColor": "",
              "color": "",
            }
          }
        >
          MR
        </span>
        <img
          alt="Maria Rossi"
          className="md-avatar__img md-avatar__img--hidden"
          draggable={false}
          onError={[Function]}
          onLoad={[Function]}
          src="./images/maria.png"
        />
      </div>
      <div
        className="details"
      >
        <div
          className="name"
        >
          Maria Rossi
          <span
            className="guest"
          >
             (Guest)
          </span>
        </div>
        <div
          className="organization"
        >
          acme.com
        </div>
      </div>
      <i
        aria-label={null}
        className="md-icon icon icon-microphone-muted_16 muted"
        style={
          Object {
            "fontSize": 16,
          }
        }
      />
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Member Host 1`] = `
Array [
  <div
    style={
      Object {
        "width": "20rem",
      }
    }
  >
    <div
      className="wxc-member"
    >
      <div
        className="wxc-avatar"
      >
        <img
          alt="avatar"
          src="./images/simon.png"
        />
      </div>
      <div
        className="md-avatar md-avatar--medium wxc-old-avatar"
        title="Simon Damiano"
      >
        <span
          className="md-avatar__letter"
          style={
            Object {
              "backgroundColor": "",
              "color": "",
            }
          }
        >
          SD
        </span>
        <img
          alt="Simon Damiano"
          className="md-avatar__img md-avatar__img--hidden"
          draggable={false}
          onError={[Function]}
          onLoad={[Function]}
          src="./images/simon.png"
        />
      </div>
      <div
        className="details"
      >
        <div
          className="name"
        >
          Simon Damiano
        </div>
        <div
          className="roles"
        >
          Host
        </div>
      </div>
      <i
        aria-label={null}
        className="md-icon icon icon-microphone-muted_16 muted"
        style={
          Object {
            "fontSize": 16,
          }
        }
      />
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Member Muted 1`] = `
Array [
  <div
    style={
      Object {
        "width": "20rem",
      }
    }
  >
    <div
      className="wxc-member"
    >
      <div
        className="wxc-avatar"
      >
        <img
          alt="avatar"
          src="./images/giacomo.png"
        />
      </div>
      <div
        className="md-avatar md-avatar--medium wxc-old-avatar"
        title="Giacomo Edwards"
      >
        <span
          className="md-avatar__letter"
          style={
            Object {
              "backgroundColor": "",
              "color": "",
            }
          }
        >
          GE
        </span>
        <img
          alt="Giacomo Edwards"
          className="md-avatar__img md-avatar__img--hidden"
          draggable={false}
          onError={[Function]}
          onLoad={[Function]}
          src="./images/giacomo.png"
        />
      </div>
      <div
        className="details"
      >
        <div
          className="name"
        >
          Giacomo Edwards
        </div>
      </div>
      <i
        aria-label={null}
        className="md-icon icon icon-microphone-muted_16 muted"
        style={
          Object {
            "fontSize": 16,
          }
        }
      />
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Member Screen Sharing 1`] = `
Array [
  <div
    style={
      Object {
        "width": "20rem",
      }
    }
  >
    <div
      className="wxc-member"
    >
      <div
        className="wxc-avatar"
      >
        <img
          alt="avatar"
          src="./images/brenda.png"
        />
      </div>
      <div
        className="md-avatar md-avatar--medium wxc-old-avatar"
        title="Brenda Song"
      >
        <span
          className="md-avatar__letter"
          style={
            Object {
              "backgroundColor": "",
              "color": "",
            }
          }
        >
          BS
        </span>
        <img
          alt="Brenda Song"
          className="md-avatar__img md-avatar__img--hidden"
          draggable={false}
          onError={[Function]}
          onLoad={[Function]}
          src="./images/brenda.png"
        />
      </div>
      <div
        className="details"
      >
        <div
          className="name"
        >
          Brenda Song
        </div>
        <div
          className="roles"
        >
          Presenter
        </div>
      </div>
      <i
        aria-label={null}
        className="md-icon icon icon-content-share_16 sharing"
        style={
          Object {
            "fontSize": 16,
          }
        }
      />
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Member Space 1`] = `
Array [
  <div
    style={
      Object {
        "width": "20rem",
      }
    }
  >
    <div
      className="wxc-member"
    >
      <div
        className="wxc-avatar"
      >
        <img
          alt="avatar"
          src="./images/barbara.png"
        />
      </div>
      <div
        className="md-avatar md-avatar--medium wxc-old-avatar"
        title="Barbara German"
      >
        <span
          className="md-avatar__letter"
          style={
            Object {
              "backgroundColor": "",
              "color": "",
            }
          }
        >
          BG
        </span>
        <img
          alt="Barbara German"
          className="md-avatar__img md-avatar__img--hidden"
          draggable={false}
          onError={[Function]}
          onLoad={[Function]}
          src="./images/barbara.png"
        />
      </div>
      <div
        className="details"
      >
        <div
          className="name"
        >
          Barbara German
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Member Status Enabled 1`] = `
Array [
  <div
    style={
      Object {
        "width": "20rem",
      }
    }
  >
    <div
      className="wxc-member"
    >
      <div
        className="wxc-avatar"
      >
        <img
          alt="avatar"
          src="./images/barbara.png"
        />
        <div
          className="status-icon-container"
        >
          <svg
            className="wxc-icon status-icon avatar-icon-dnd"
            fill="none"
            height={24}
            style={Object {}}
            viewBox="0 0 32 32"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M16 29.5C23.4558 29.5 29.5 23.4558 29.5 16C29.5 8.54416 23.4558 2.5 16 2.5C8.54416 2.5 2.5 8.54416 2.5 16C2.5 23.4558 8.54416 29.5 16 29.5ZM10 15C9.44772 15 9 15.4477 9 16C9 16.5523 9.44772 17 10 17H22C22.5523 17 23 16.5523 23 16C23 15.4477 22.5523 15 22 15H10Z"
              fillRule="evenodd"
            />
          </svg>
          <i
            aria-label={null}
            className="md-icon icon undefined wxc-old-icon"
            style={
              Object {
                "fontSize": 16,
              }
            }
          />
        </div>
      </div>
      <div
        className="md-avatar md-avatar--dnd md-avatar--medium wxc-old-avatar"
        title="Barbara German"
      >
        <span
          className="md-avatar__letter"
          style={
            Object {
              "backgroundColor": "",
              "color": "",
            }
          }
        >
          BG
        </span>
        <img
          alt="Barbara German"
          className="md-avatar__img md-avatar__img--hidden"
          draggable={false}
          onError={[Function]}
          onLoad={[Function]}
          src="./images/barbara.png"
        />
      </div>
      <div
        className="details"
      >
        <div
          className="name"
        >
          Barbara German
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
